# Qt5LegacyControls

./: .clangd  .gitignore  CMakeLists.txt  LICENSE
QtQuick/LegacyControls/: BasicTableView.qml  BasicTableViewStyle.qml  CMakeLists.txt  CalendarHeaderModel.qml  CalendarOld.qml  CalendarStyle.qml  FocusFrame.qml  FocusFrameStyle.qml  ScrollBarOld.qml  ScrollViewHelper.qml  ScrollViewOld.qml  ScrollViewStyle.qml  Style.qml  TableViewColumn.qml  TableViewOld.qml  TableViewSelection.qml  TableViewStyle.qml  TextSingleton.qml  abstractstyle.cpp  abstractstyle.h  calendarmodel.cpp  calendarmodel.h  enumerations.h  padding.h  rangeddate.cpp  rangeddate.h  rangemodel.cpp  rangemodel.h  rangemodelprivate.h  wheelarea.cpp  wheelarea.h
